Work through some initial mechanics of the algorithm.

--- a/MeshWarrior.vcxproj
+++ b/MeshWarrior.vcxproj
@@ -151,6 +151,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Source\AxisAlignedBox.h" />
+    <ClInclude Include="Source\BoundingBoxTree.h" />
     <ClInclude Include="Source\Defines.h" />
     <ClInclude Include="Source\Mesh.h" />
     <ClInclude Include="Source\MeshFormat.h" />
@@ -164,6 +166,8 @@
     <ClInclude Include="Source\Vector.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Source\AxisAlignedBox.cpp" />
+    <ClCompile Include="Source\BoundingBoxTree.cpp" />
     <ClCompile Include="Source\Mesh.cpp" />
     <ClCompile Include="Source\MeshFormat.cpp" />
     <ClCompile Include="Source\MeshFormats\OBJFormat.cpp" />
