It's time for bed!

--- a/MeshWarrior.vcxproj
+++ b/MeshWarrior.vcxproj
@@ -153,6 +153,7 @@
   <ItemGroup>
     <ClInclude Include="Source\AxisAlignedBox.h" />
     <ClInclude Include="Source\BoundingBoxTree.h" />
+    <ClInclude Include="Source\ConvexPolygon.h" />
     <ClInclude Include="Source\Defines.h" />
     <ClInclude Include="Source\Mesh.h" />
     <ClInclude Include="Source\MeshFormat.h" />
@@ -163,11 +164,13 @@
     <ClInclude Include="Source\MeshOperations\MeshUnionOperation.h" />
     <ClInclude Include="Source\MeshSetOperation.h" />
     <ClInclude Include="Source\MeshTopology.h" />
+    <ClInclude Include="Source\Plane.h" />
     <ClInclude Include="Source\Vector.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\AxisAlignedBox.cpp" />
     <ClCompile Include="Source\BoundingBoxTree.cpp" />
+    <ClCompile Include="Source\ConvexPolygon.cpp" />
     <ClCompile Include="Source\Mesh.cpp" />
     <ClCompile Include="Source\MeshFormat.cpp" />
     <ClCompile Include="Source\MeshFormats\OBJFormat.cpp" />
@@ -177,6 +180,7 @@
     <ClCompile Include="Source\MeshOperations\MeshUnionOperation.cpp" />
     <ClCompile Include="Source\MeshSetOperation.cpp" />
     <ClCompile Include="Source\MeshTopology.cpp" />
+    <ClCompile Include="Source\Plane.cpp" />
     <ClCompile Include="Source\Vector.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
