--- a/MeshWarrior.vcxproj.filters
+++ b/MeshWarrior.vcxproj.filters
@@ -58,6 +58,9 @@
     <ClInclude Include="Source\Plane.h">
       <Filter>Source</Filter>
     </ClInclude>
+    <ClInclude Include="Source\MeshGraph.h">
+      <Filter>Source</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\Vector.cpp">
