Test a basic mesh operation.  Add shape classes.

--- a/MeshWarrior.vcxproj
+++ b/MeshWarrior.vcxproj
@@ -162,10 +162,11 @@
     <ClInclude Include="Source\MeshOperation.h" />
     <ClInclude Include="Source\MeshOperations\MeshDifferenceOperation.h" />
     <ClInclude Include="Source\MeshOperations\MeshIntersectionOperation.h" />
+    <ClInclude Include="Source\MeshOperations\MeshMergeOperation.h" />
     <ClInclude Include="Source\MeshOperations\MeshUnionOperation.h" />
     <ClInclude Include="Source\MeshSetOperation.h" />
     <ClInclude Include="Source\MeshTopology.h" />
-    <ClInclude Include="Source\Plane.h" />
+    <ClInclude Include="Source\Shape.h" />
     <ClInclude Include="Source\Vector.h" />
   </ItemGroup>
   <ItemGroup>
@@ -178,10 +179,11 @@
     <ClCompile Include="Source\MeshOperation.cpp" />
     <ClCompile Include="Source\MeshOperations\MeshDifferenceOperation.cpp" />
     <ClCompile Include="Source\MeshOperations\MeshIntersectionOperation.cpp" />
+    <ClCompile Include="Source\MeshOperations\MeshMergeOperation.cpp" />
     <ClCompile Include="Source\MeshOperations\MeshUnionOperation.cpp" />
     <ClCompile Include="Source\MeshSetOperation.cpp" />
     <ClCompile Include="Source\MeshTopology.cpp" />
-    <ClCompile Include="Source\Plane.cpp" />
+    <ClCompile Include="Source\Shape.cpp" />
     <ClCompile Include="Source\Vector.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
