Finally get to the point where I can begin testing the initial phase of the algorithm.  Not yet tested.

--- a/MeshWarrior.vcxproj.filters
+++ b/MeshWarrior.vcxproj.filters
@@ -52,7 +52,7 @@
     <ClInclude Include="Source\BoundingBoxTree.h">
       <Filter>Source</Filter>
     </ClInclude>
-    <ClInclude Include="Source\ConvexPolygon.h">
+    <ClInclude Include="Source\Polygon.h">
       <Filter>Source</Filter>
     </ClInclude>
     <ClInclude Include="Source\Shape.h">
@@ -105,7 +105,7 @@
     <ClCompile Include="Source\Shape.cpp">
       <Filter>Source</Filter>
     </ClCompile>
-    <ClCompile Include="Source\ConvexPolygon.cpp">
+    <ClCompile Include="Source\Polygon.cpp">
       <Filter>Source</Filter>
     </ClCompile>
     <ClCompile Include="Source\MeshOperations\MeshMergeOperation.cpp">
