--- a/MeshWarrior.vcxproj
+++ b/MeshWarrior.vcxproj
@@ -153,7 +153,7 @@
   <ItemGroup>
     <ClInclude Include="Source\AxisAlignedBox.h" />
     <ClInclude Include="Source\BoundingBoxTree.h" />
-    <ClInclude Include="Source\ConvexPolygon.h" />
+    <ClInclude Include="Source\Polygon.h" />
     <ClInclude Include="Source\Defines.h" />
     <ClInclude Include="Source\Mesh.h" />
     <ClInclude Include="Source\MeshFormat.h" />
@@ -172,7 +172,7 @@
   <ItemGroup>
     <ClCompile Include="Source\AxisAlignedBox.cpp" />
     <ClCompile Include="Source\BoundingBoxTree.cpp" />
-    <ClCompile Include="Source\ConvexPolygon.cpp" />
+    <ClCompile Include="Source\Polygon.cpp" />
     <ClCompile Include="Source\Mesh.cpp" />
     <ClCompile Include="Source\MeshFormat.cpp" />
     <ClCompile Include="Source\MeshFormats\OBJFormat.cpp" />
