Try to be consistent with class hierarchies, I guess.
It's kind of hard not to go crazy with class inheritance and try to create the grand unified theory of everything where everything has the same base class, etc.  It usually doesn't turn out well and you just end up with a mess.  What I have already might be considered a bit messy to some, I suppose.

--- a/MeshWarrior.vcxproj
+++ b/MeshWarrior.vcxproj
@@ -151,6 +151,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Source\AlgebraicSurface.h" />
     <ClInclude Include="Source\AxisAlignedBox.h" />
     <ClInclude Include="Source\BoundingBoxTree.h" />
     <ClInclude Include="Source\Polygon.h" />
@@ -170,6 +171,7 @@
     <ClInclude Include="Source\Vector.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Source\AlgebraicSurface.cpp" />
     <ClCompile Include="Source\AxisAlignedBox.cpp" />
     <ClCompile Include="Source\BoundingBoxTree.cpp" />
     <ClCompile Include="Source\Polygon.cpp" />
