I'm not entirely sure about this refactor, but...whatever.  These files formats often contain things other than meshes that we might want to load/save.  In any case, we should support the ability to load multiple meshes from a single file.

--- a/MeshWarrior.vcxproj
+++ b/MeshWarrior.vcxproj
@@ -154,11 +154,12 @@
     <ClInclude Include="Source\AlgebraicSurface.h" />
     <ClInclude Include="Source\AxisAlignedBox.h" />
     <ClInclude Include="Source\BoundingBoxTree.h" />
+    <ClInclude Include="Source\FileFormats\OBJFormat.h" />
+    <ClInclude Include="Source\FileObject.h" />
     <ClInclude Include="Source\Polygon.h" />
     <ClInclude Include="Source\Defines.h" />
     <ClInclude Include="Source\Mesh.h" />
-    <ClInclude Include="Source\MeshFormat.h" />
-    <ClInclude Include="Source\MeshFormats\OBJFormat.h" />
+    <ClInclude Include="Source\FileFormat.h" />
     <ClInclude Include="Source\MeshGraph.h" />
     <ClInclude Include="Source\MeshOperation.h" />
     <ClInclude Include="Source\MeshOperations\MeshDifferenceOperation.h" />
@@ -174,10 +175,11 @@
     <ClCompile Include="Source\AlgebraicSurface.cpp" />
     <ClCompile Include="Source\AxisAlignedBox.cpp" />
     <ClCompile Include="Source\BoundingBoxTree.cpp" />
+    <ClCompile Include="Source\FileFormats\OBJFormat.cpp" />
+    <ClCompile Include="Source\FileObject.cpp" />
     <ClCompile Include="Source\Polygon.cpp" />
     <ClCompile Include="Source\Mesh.cpp" />
-    <ClCompile Include="Source\MeshFormat.cpp" />
-    <ClCompile Include="Source\MeshFormats\OBJFormat.cpp" />
+    <ClCompile Include="Source\FileFormat.cpp" />
     <ClCompile Include="Source\MeshOperation.cpp" />
     <ClCompile Include="Source\MeshOperations\MeshDifferenceOperation.cpp" />
     <ClCompile Include="Source\MeshOperations\MeshIntersectionOperation.cpp" />
