Try to improve the API.  Still seems a bit silly to me, but whatever.

--- a/MeshWarrior.vcxproj
+++ b/MeshWarrior.vcxproj
@@ -157,17 +157,14 @@
     <ClInclude Include="Source\Compressor.h" />
     <ClInclude Include="Source\FileFormats\OBJFormat.h" />
     <ClInclude Include="Source\FileObject.h" />
+    <ClInclude Include="Source\MeshOperations\MeshSetOperation.h" />
     <ClInclude Include="Source\Polygon.h" />
     <ClInclude Include="Source\Defines.h" />
     <ClInclude Include="Source\Mesh.h" />
     <ClInclude Include="Source\FileFormat.h" />
     <ClInclude Include="Source\MeshGraph.h" />
     <ClInclude Include="Source\MeshOperation.h" />
-    <ClInclude Include="Source\MeshOperations\MeshDifferenceOperation.h" />
-    <ClInclude Include="Source\MeshOperations\MeshIntersectionOperation.h" />
     <ClInclude Include="Source\MeshOperations\MeshMergeOperation.h" />
-    <ClInclude Include="Source\MeshOperations\MeshUnionOperation.h" />
-    <ClInclude Include="Source\MeshSetOperation.h" />
     <ClInclude Include="Source\MeshTopology.h" />
     <ClInclude Include="Source\Polyline.h" />
     <ClInclude Include="Source\Shape.h" />
@@ -181,15 +178,12 @@
     <ClCompile Include="Source\FileFormats\OBJFormat.cpp" />
     <ClCompile Include="Source\FileObject.cpp" />
     <ClCompile Include="Source\MeshGraph.cpp" />
+    <ClCompile Include="Source\MeshOperations\MeshSetOperation.cpp" />
     <ClCompile Include="Source\Polygon.cpp" />
     <ClCompile Include="Source\Mesh.cpp" />
     <ClCompile Include="Source\FileFormat.cpp" />
     <ClCompile Include="Source\MeshOperation.cpp" />
-    <ClCompile Include="Source\MeshOperations\MeshDifferenceOperation.cpp" />
-    <ClCompile Include="Source\MeshOperations\MeshIntersectionOperation.cpp" />
     <ClCompile Include="Source\MeshOperations\MeshMergeOperation.cpp" />
-    <ClCompile Include="Source\MeshOperations\MeshUnionOperation.cpp" />
-    <ClCompile Include="Source\MeshSetOperation.cpp" />
     <ClCompile Include="Source\MeshTopology.cpp" />
     <ClCompile Include="Source\Polyline.cpp" />
     <ClCompile Include="Source\Shape.cpp" />
