--- a/Editor/Editor.vcxproj.filters
+++ b/Editor/Editor.vcxproj.filters
@@ -5,6 +5,9 @@
       <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
       <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
     </Filter>
+    <Filter Include="Source\Panels">
+      <UniqueIdentifier>{a3fda36a-fd27-41e1-bb31-9e4a1dd4684e}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\EditorApp.h">
@@ -13,12 +16,30 @@
     <ClInclude Include="Source\EditorFrame.h">
       <Filter>Source</Filter>
     </ClInclude>
+    <ClInclude Include="Source\EditorPanel.h">
+      <Filter>Source</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Panels\CanvasPanel.h">
+      <Filter>Source\Panels</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\EditorCanvas.h">
+      <Filter>Source</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\EditorApp.cpp">
       <Filter>Source</Filter>
     </ClCompile>
     <ClCompile Include="Source\EditorFrame.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\EditorPanel.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Panels\CanvasPanel.cpp">
+      <Filter>Source\Panels</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\EditorCanvas.cpp">
       <Filter>Source</Filter>
     </ClCompile>
   </ItemGroup>
