--- a/MeshWarrior.vcxproj
+++ b/MeshWarrior.vcxproj
@@ -170,6 +170,7 @@
     <ClInclude Include="Source\Polyline.h" />
     <ClInclude Include="Source\Quaternion.h" />
     <ClInclude Include="Source\Shape.h" />
+    <ClInclude Include="Source\Transform.h" />
     <ClInclude Include="Source\TypeHeap.h" />
     <ClInclude Include="Source\Vector.h" />
   </ItemGroup>
@@ -191,6 +192,7 @@
     <ClCompile Include="Source\Polyline.cpp" />
     <ClCompile Include="Source\Quaternion.cpp" />
     <ClCompile Include="Source\Shape.cpp" />
+    <ClCompile Include="Source\Transform.cpp" />
     <ClCompile Include="Source\Vector.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
